--- a/components/drawer/Drawer.module.scss
+++ b/components/drawer/Drawer.module.scss
@@ -5,11 +5,15 @@
       @apply hidden;
    }
 
-   .drawer {
-      @apply p-3 fixed z-10 -right-full top-0 bg-secondary w-full max-w-sm h-screen duration-300 ease-in-out;
-   
+   >.drawer {
+      @apply fixed -right-full top-0 bg-secondary h-screen max-w-sm w-full z-50 duration-500 ease-in-out p-5 min-h-full flex flex-col;
+
       &.active {
-         @apply right-0 max-w-md;
+         @apply -right-0;
+      }
+
+      >.drawer-header {
+         @apply text-2xl flex justify-between items-center;
       }
    }
 }
