--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -1,42 +1,56 @@
 .header {
-   @apply h-60 grid items-center grid-cols-3;
+   @apply h-56 grid grid-cols-3 items-center;
 
    @media all and (max-width: '900px') {
-      @apply grid-cols-2;
+      @apply grid-cols-2 sticky top-0 h-44 z-10 -mr-5% -ml-5% pr-5% pl-5%;
 
-      
-      &__info {
-         @apply hidden;
+      &::after {
+         content: '';
+         @apply absolute top-0 left-0 w-full h-full backdrop-blur-sm -z-10 border-b border-white;
       }
+   }
 
-      &__links {
+   &__info {
+      @media all and (max-width: '900px') {
          @apply hidden;
       }
    }
 
-
    &__logo {
-      @apply flex items-center flex-col w-40 m-auto;
+      @apply flex items-center flex-col h-fit w-fit m-auto;
+
+      @media all and (max-width: '1100px') {
+         @apply w-24;
+
+         >p {
+            @apply text-sm;
+         }
+      }
+
+      @media all and (max-width: '900px') {
+         @apply m-0;
+      }
+
+      @media all and (max-width: '600px') {
+         @apply w-20 m-0;
+
+         >p {
+            @apply text-xs;
+         }
+      }
 
       >img {
          @apply rounded-full;
       }
+
       >p {
-         @apply text-2xl font-bold;
-      }
-
-      @media all and (max-width: '900px') {
-         @apply w-24 m-0;
-
-         >img {
-            @apply w-16 h-16;
-         }
-
-         >p {
-            @apply text-base font-bold;
-         }
+         @apply w-fit pt-2;
       }
    }
 
- 
+   &__links {
+      @media all and (max-width: '900px') {
+         @apply hidden;
+      }
+   }
 }
