--- a/ui/video/Video.module.scss
+++ b/ui/video/Video.module.scss
@@ -1,4 +1,6 @@
 .wr_video {
+   @apply fixed top-0 left-0 w-full;
+   
    >video {
       @apply absolute top-0 h-screen z-10 left-0 object-cover;
    }
