--- a/components/about-us/AboutUs.module.scss
+++ b/components/about-us/AboutUs.module.scss
@@ -10,10 +10,18 @@
    }
 
    &__image_block {
-      @apply h-96 w-full;
+      @apply h-96 w-full overflow-hidden;
 
       >img {
-         @apply h-full w-full object-cover;
+         @apply h-full w-full object-cover duration-300 ease-in-out;
+
+         &:hover {   
+            @apply scale-110;
+
+            @media all and (max-width: '900px') {
+               @apply scale-100;
+            }
+         }
       }
    }
 
